--- a/index.css
+++ b/index.css
@@ -14,11 +14,30 @@ button {
     padding: 5px 10px 5px 10px;
     background-color: lightgray;
     outline: none;
-    cursor:pointer;
+    cursor: pointer;
+}
+#title {
+    margin-bottom: 5px;
 }
 #footer {
     margin-top: 50px;
     font-size: 14px;
+}
+#pic {
+    border-radius: 50%;
+    max-width:100%;
+    max-height:100%;
+}
+#pic_div {
+    display: inline-block;
+    width: 250px;
+    height: 250px;
+    margin: 5px;
+    margin-right: 10px;
+}
+#info {
+    display: inline-block;
+    vertical-align: top;
 }
 .norm {
     margin-left: 15px;
