--- a/index.css
+++ b/index.css
@@ -2,6 +2,8 @@ body {
     font-family: Arial, Verdana, Helvetica;
     padding: 20px;
     font-size: 16px;
+    margin: auto;
+    max-width: 800px;
 }
 heading {
     font-weight: bold;
@@ -47,7 +49,7 @@ button {
 .card {
     margin-left: 10px;
     margin-right: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     padding: 20px;
     box-shadow: 0px 0px 5px #aaa;
 }
