--- a/index.css
+++ b/index.css
@@ -30,6 +30,11 @@ button {
     max-width:100%;
     max-height:100%;
 }
+#pic_desc {
+    margin-top: 10px;
+    float: right;
+    font-size: 12px;
+}
 #pic_div {
     display: inline-block;
     width: 250px;
@@ -40,6 +45,9 @@ button {
 #info {
     display: inline-block;
     vertical-align: top;
+}
+#about {
+    margin-top: 30px;
 }
 .norm {
     margin-left: 15px;
