--- a/css/style.css
+++ b/css/style.css
@@ -372,6 +372,9 @@ body.offcanvas {
   margin: 0;
   padding: 0; }
 
+.colorlib-publications,
+.colorlib-awards,
+.colorlib-project,
 .colorlib-experience,
 .colorlib-skills,
 .colorlib-education,
@@ -380,12 +383,15 @@ body.offcanvas {
 .colorlib-about,
 .colorlib-services,
 .colorlib-contact {
-  padding-top: 4em;
-  padding-bottom: 9em;
+  padding-top: 1em;
+  padding-bottom: 5em;
   clear: both;
   width: 100%;
   display: block; }
   @media screen and (max-width: 768px) {
+    .colorlib-publications,
+    .colorlib-awards,
+    .colorlib-project,
     .colorlib-experience,
     .colorlib-skills,
     .colorlib-education,
@@ -394,8 +400,8 @@ body.offcanvas {
     .colorlib-about,
     .colorlib-services,
     .colorlib-contact {
-      padding-top: 5em;
-      padding-bottom: 8em; } }
+      padding-top: 4em;
+      padding-bottom: 1em; } }
 
 .author-img {
   background-size: cover;
