--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, Verdana, Helvetica;
+    font-family: Helvetica Neue, Arial, Verdana;
     padding: 20px;
     font-size: 16px;
     margin: auto;
