--- a/index.css
+++ b/index.css
@@ -47,8 +47,12 @@ button:hover {
     display: inline-block;
     vertical-align: top;
 }
-#title {
+.title {
     margin: 25px 0;
+    margin-bottom: 15px;
+}
+#pub_title {
+    margin: 5px 0 15px 0;
     margin-bottom: 15px;
 }
 #footer {
@@ -82,6 +86,12 @@ button:hover {
     margin-left: 15px;
     margin-right: 15px;
     margin-bottom: 15px;
+}
+#tab_details {
+    font-size: 12px;
+    font-style: italic;
+    margin-top: 15px;
+    text-align: center;
 }
 .card {
     background-color: none;
