--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@ button {
     font-family: Arial, Verdana, Helvetica;
     font-size: 18px;
     margin: 2px 2px 0px 2px;
-    padding: 5px 10px 5px 10px;
+    padding: 5px 18px 5px 18px;
     background-color: none;
     outline: none;
     cursor: pointer;
@@ -102,7 +102,7 @@ button:hover {
 .card_body {
     margin-left: 15px;
 }
-.card_main {
+.hide_on_all {
     display: none;
 }
 .date {
